[package]
name = "reflex-engine-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Reflex Engine Contributors"]
description = "Local-first deterministic geospatial evaluation with replayable audit artifacts"
license = "MIT"

[lib]
name = "reflex_engine"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Quiet compilation output for cleaner demos
[profile.dev]
opt-level = 1
debug = false
